add endpoint for retrieving product details by product code