@@ -4,4 +4,5 @@ Backend part of the Lestro project
 Images source: https://pixabay.com/
 
 Components required to run the application locally:
-- Elasticsearch instance running on localhost:9200
+- Elasticsearch instance running on localhost:9200,
+- set '--add-opens java.base/java.lang=ALL-UNNAMED' VM option for product-service project
